<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="my.edu.tarc.practical22profile.MainActivity">

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/email"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="26dp"
        android:text="@string/name"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="RtlHardcoded" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="27dp"
        android:contentDescription="@string/profile_picture"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user" />

    <ImageButton
        android:id="@+id/imageButtonWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/web"
        android:onClick="web"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail"
        app:srcCompat="@drawable/ic_web_black_24px"
        tools:ignore="MissingConstraints,RtlHardcoded,VectorDrawableCompat" />

    <ImageButton
        android:id="@+id/imageButtonPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="7dp"
        android:contentDescription="@string/phone"
        android:onClick="phone"
        app:layout_constraintLeft_toRightOf="@+id/imageButtonWeb"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail"
        app:srcCompat="@drawable/ic_contact_phone_black_24dp"
        tools:ignore="MissingConstraints,RtlHardcoded,VectorDrawableCompat" />

    <ImageButton
        android:id="@+id/imageButtonMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="7dp"
        android:contentDescription="@string/mail"
        android:onClick="showSendTo"
        app:layout_constraintLeft_toRightOf="@+id/imageButtonPhone"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail"
        app:srcCompat="@drawable/ic_email_black_24dp"
        tools:ignore="MissingConstraints,RtlHardcoded,VectorDrawableCompat" />

    <ImageButton
        android:id="@+id/imageButtonHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="7dp"
        android:contentDescription="@string/home"
        android:onClick="home"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintLeft_toRightOf="@+id/imageButtonMail"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail"
        app:srcCompat="@drawable/ic_home_black_24dp"
        tools:ignore="MissingConstraints,RtlHardcoded,VectorDrawableCompat" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:onClick="updateprofile"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
